--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
     "replicate": "^0.31.1",
+    "stripe": "^16.2.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
