--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@radix-ui/react-progress": "^1.1.0",
 		"@radix-ui/react-select": "^2.1.1",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@vercel/analytics": "^1.3.1",
 		"axios": "^1.7.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
@@ -32,6 +33,7 @@
 		"react-hot-toast": "^2.4.1",
 		"react-markdown": "^9.0.1",
 		"replicate": "^0.31.1",
+		"sharp": "^0.33.4",
 		"stripe": "^16.2.0",
 		"tailwind-merge": "^2.4.0",
 		"tailwindcss-animate": "^1.0.7",
